<resources>
    <string name="app_name">A校园</string>

    <string name="app_logo_name_zh">学生\"养成教育\"大数据综合服务平台</string>
    <string name="app_logo_name_en">Students\'\"education\"big data integrated service platform</string>

    <string name="navi_home">主页</string>
    <string name="navi_survey">调查</string>
    <string name="navi_sos">求助</string>
    <string name="navi_report">举报</string>
    <string name="navi_mine">我的</string>
    <string name="navi_event">事件</string>
    <string name="navi_survey_online">在线调查</string>
    <string name="navi_cooperation">家校协同</string>
    <string name="title_activity_record_only">RecordOnlyActivity</string>
    <string name="ok">确定</string>
    
    <!--新APP开始-->
    
    <!--登录-->
    
    
    <!--首页-->
    <string name="puti_home_week_increase">本周新增</string>
    <string name="puti_home_my_post">我发起的</string>
    <string name="puti_home_add_event">事件登记</string>
    <string name="puti_home_event_manager">班级事件</string>
    <string name="puti_home_event_sure">事件确认</string>
    <string name="puti_home_parent_report">家长来信</string>
    <string name="puti_home_stu_record">学生档案</string>
    <string name="puti_home_my_record">我的档案</string>
    <string name="puti_home_my_question">我的问卷</string>
    <string name="puti_home_work_check">工作检查</string>
    <string name="puti_home_school_phone_book">校园通讯录</string>
    <string name="puti_home_parent_phone_book">家长通讯录</string>
    <string name="puti_home_class_schedule">班级课表</string>
    <string name="puti_home_my_schedule">我的课表</string>
    
    
    <!--个人信息-->
    <string name="puti_person_qr_code">我的二维码</string>
    <string name="puti_person_invite_use">邀请使用</string>
    <string name="puti_person_suggestion_feedback">意见反馈</string>
    <string name="puti_person_good_evaluate">去赏个好评</string>
    <string name="puti_person_update_psw">修改密码</string>
    <string name="puti_person_trouble_help">故障帮助</string>
    <string name="puti_person_current_version_code">当前版本号</string>
    <string name="puti_person_logout">退 出</string>
    <string name="puti_person_trouble_phone">0755 23501191</string>
    <string name="puti_feedback">反馈有奖</string>
    <string name="puti_feedback_hint">请留下您的宝贵意见，我们将努力改进，同时我们将在每月抽取三个用户进行奖励！</string>
    
    <!--相册-->
    <string name="puti_album">从相册中选择</string>
    <string name="puti_camera">拍照</string>
    <!--修改密码-->
    <string name="puti_update_old_psw">请输入旧密码</string>
    <string name="puti_update_new_psw">请输入新密码</string>
    <string name="puti_update_new_psw_again">请再次输入新密码</string>
    <string name="puti_update_comparison_psw">2次输入的新密码不一致，请重新输入</string>
    <string name="puti_update_success">修改密码成功</string>
    <string name="puti_update_too_short">密码不能少于6位</string>

    <!--选择事件-->
    <string name="puti_choose_event_type">选择事件类型</string>
</resources>
