<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_f3f3f3"
        android:orientation="vertical"
        >
        <!--head-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            >
            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="返回"
                android:textColor="@color/base_39BCA1"
                android:textSize="@dimen/sp_14"
                android:drawableLeft="@drawable/puti_back"
                />
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/base_333333"
                android:textSize="@dimen/sp_14"
                />
        </RelativeLayout>


        <!--头像-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            >
            <ImageView
                android:id="@+id/head_icon"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"
                android:layout_centerInParent="true"
                android:scaleType="center"
                />
        </RelativeLayout>
        <!--我的二维码-->
        <unit.widget.SettingItem
            android:id="@+id/qr_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            app:title="@string/puti_person_qr_code"
            ></unit.widget.SettingItem>

        <!--邀请使用-->
        <unit.widget.SettingItem
            android:id="@+id/invite_use"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            app:title="@string/puti_person_invite_use"
            ></unit.widget.SettingItem>

        <!--意见反馈-->
        <unit.widget.SettingItem
            android:id="@+id/feed_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            app:title="@string/puti_person_suggestion_feedback"
            ></unit.widget.SettingItem>

        <!--去赏个好评-->
        <unit.widget.SettingItem
            android:id="@+id/evaluate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            app:title="@string/puti_person_good_evaluate"
            ></unit.widget.SettingItem>

        <!--修改密码-->
        <unit.widget.SettingItem
            android:id="@+id/update_psw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            app:title="@string/puti_person_update_psw"
            ></unit.widget.SettingItem>

        <!--故障帮助-->
        <unit.widget.SettingItem
            android:id="@+id/trouble_help"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            app:title="@string/puti_person_trouble_help"
            app:showIcon="false"
            ></unit.widget.SettingItem>

        <!--当前版本号-->
        <unit.widget.SettingItem
            android:id="@+id/current_version"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            app:title="@string/puti_person_current_version_code"
            app:showIcon="false"
            ></unit.widget.SettingItem>
        <!--退出登录-->
        <TextView
            android:id="@+id/lgout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/puti_person_logout"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/base_ffffff"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_100"
            android:background="@drawable/puti_shape_fe6a6a"
            android:layout_marginBottom="@dimen/dp_40"
            android:gravity="center"
            />


    </LinearLayout>
</ScrollView>